# ugdb

./: .gitignore  CHANGELOG.md  Cargo.toml  IPC.md  LICENSE  README.md  TODO.txt  build.rs  run_and_log.sh
gdb-expression-parsing/: Cargo.toml  build.rs
gdb-expression-parsing/src/: ast.rs  lexer.rs  lib.rs  parser.lalrpop  parser.rs
gdbmi-rs/: Cargo.toml
gdbmi-rs/src/: commands.rs  input.rs  lib.rs  output.rs
src/: completion.rs  gdb.rs  gui.rs  input.rs  ipc.rs  layout.rs  logging.rs  main.rs  serial.rs  signalchannel.rs
src/completion/: gdb_commands.rs  gen_command_list.sh  mod.rs
src/gdb_expression_parsing/: ast.rs  lexer.rs  mod.rs  parser.lalrpop  parser.rs
src/gdbmi/: commands.rs  input.rs  mod.rs  output.rs
src/gui/: mod.rs
src/pty/: mod.rs
src/tui/: commands.rs  console.rs  expression_table.rs  mod.rs  pseudoterminal.rs  srcview.rs  tui.rs
src/tui/expression_table/: ast.rs  expression_parsing.rs  lexer.rs  mod.rs
src/unsegen/: input.rs  linestorage.rs  mod.rs  terminal.rs  textattribute.rs  widget.rs  widgets.rs  window.rs
src/unsegen/widgets/: lineedit.rs  linelabel.rs  logviewer.rs  mod.rs  pager.rs  promptline.rs
unsegen/: Cargo.toml
unsegen-jsonviewer/: Cargo.toml
unsegen-jsonviewer/src/: displayvalue.rs  lib.rs  path.rs
unsegen-signals/: Cargo.toml
unsegen-signals/src/: lib.rs
unsegen-terminal/: Cargo.toml
unsegen-terminal/src/: ansi.rs  index.rs  lib.rs  terminalwindow.rs
unsegen/jsonviewer/: Cargo.toml
unsegen/jsonviewer/src/: displayvalue.rs  lib.rs  path.rs
unsegen/signals/: Cargo.toml
unsegen/signals/src/: lib.rs
unsegen/src/: layouts.rs  lib.rs  linestorage.rs  widget.rs  window.rs
unsegen/src/base/: basic_types.rs  cursor.rs  grapheme_cluster.rs  mod.rs  ranges.rs  style.rs  terminal.rs  textattribute.rs  window.rs
unsegen/src/container/: boxdrawing.rs  mod.rs
unsegen/src/input/: mod.rs
unsegen/src/widget/: layouts.rs  linestorage.rs  mod.rs  widget.rs
unsegen/src/widget/widgets/: jsonviewer.rs  lineedit.rs  linelabel.rs  logviewer.rs  mod.rs  pager.rs  promptline.rs  table.rs
unsegen/src/widget/widgets/jsonviewer/: displayvalue.rs  mod.rs  path.rs
unsegen/src/widgets/: lineedit.rs  linelabel.rs  logviewer.rs  pager.rs
unsegen/terminal/: Cargo.toml
unsegen/terminal/src/: ansi.rs  index.rs  lib.rs  terminalwindow.rs
unsegen/terminal/src/pty/: ffi.rs  mod.rs
