[package]
name = "ugdb"
version = "0.1.11"
authors = ["ftilde <ftilde@tamepointer.de>"]
description = "An alternative TUI for gdb"
repository = "https://github.com/ftilde/ugdb"
readme = "README.md"
license = "MIT"
keywords = ["tui", "gdb"]
edition = "2018"

[[bin]]
doc = false
name = "ugdb"

[profile.release]
debug = 1

[dependencies]
structopt = "0.2.1"
time = "0.1"
backtrace = "0.3"
termion = "1.5"
nix = "0.17"
flexi_logger = "^0.11.2"
log = "0.4"
derive_more = "0.14"

# For IPC
json = "0.11"
rand = "0.3"
unix_socket = "0.5"
unicode-segmentation = "1.2"
parse_int = "0.5"

unsegen = "0.3.1"
unsegen_signals = "0.3"
unsegen_terminal = "0.3.2"
#unsegen_terminal = { path = "../unsegen_terminal" }
unsegen_jsonviewer = "0.3"
#unsegen_jsonviewer = { path="../unsegen_jsonviewer" }
unsegen_pager = "0.3"
#unsegen_pager = { path="../unsegen_pager"}

# gdbmi
nom = "2.1"

[build-dependencies]
toml = "0.4"


# Use one of these for development of new features of unsegen
#[patch.crates-io]
#unsegen = { git = 'https://github.com/ftilde/unsegen' }
#unsegen = { path = "../unsegen" }
